added the rows for the sections on the SPA

--- a/index.html
+++ b/index.html
@@ -12,25 +12,35 @@
     <title>The Long Journey Home</title>
 </head>
 <body>
+    <header>
+        <h1 id="title" class="text-center">The Long Journey Home</h1>
+    </header>
     <nav class="navbar navbar-expand-lg navbar-light container-fluid">
         <div id="navigation" class="row">
+            <!-- move these links to the links section once created -->
             <a class="navbar-brand col-md-4" href="http://www.mvtimes.com/" target="_blank">Martha's Vineyard Times</a>
             <a class="navbar-brand col-md-4" href="http://champagnebooks.com/store/index.php" target="_blank">Champagne Books</a>
             <a class="navbar-brand col-md-4" href="http://champagnebooks.com/store/index.php?id_product=727&controller=product" target="_blank">Preorder Your Copy!</a>
         </div>
     </nav>
-    <header>
-        <h1 id="title" class="text-center">The Long Journey Home</h1>
-    </header>
     <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                
-            </div>
-            <div class="col-md-4">
-
-            </div>
-        </div>
+       <div class ="row" id="tagBlurb">
+           <div class ="col-sm">
+               <div id="taglineDiv">
+               </div>
+           </div>
+           <div class="col-sm">
+               <div id="blurbDiv">
+               </div>
+           </div>
+       </div>
+       <div class="row" id="synopsisSection">
+           
+       </div>
+       <div class="row" id="authorSection">
+       </div>
+       <div class="row" id="linksSection">
+       </div>
     </div>
 </body>
 </html>
