--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
+        crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Merienda:400,700" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>The Long Journey Home</title>
 </head>
+
 <body>
     <header>
         <h1 id="title" class="text-center">The Long Journey Home</h1>
@@ -24,23 +26,37 @@
         </div>
     </nav>
     <div class="container">
-       <div class ="row" id="tagBlurb">
-           <div class ="col-sm">
-               <div id="taglineDiv">
-               </div>
-           </div>
-           <div class="col-sm">
-               <div id="blurbDiv">
-               </div>
-           </div>
-       </div>
-       <div class="row" id="synopsisSection">
-           
-       </div>
-       <div class="row" id="authorSection">
-       </div>
-       <div class="row" id="linksSection">
-       </div>
+        <!-- complete this row last, the transition will make it the hardest -->
+        <div class="row" id="tagBlurb">
+            <div class="col-sm">
+                <div id="taglineDiv">
+                </div>
+            </div>
+            <div class="col-sm">
+                <div id="blurbDiv">
+                </div>
+            </div>
+        </div>
+        <div class="row" id="synopsisSection">
+            <div class="col-sm-8">
+                <div class="row">
+                    <div  id="synopsis" class="col-sm">
+                    </div>
+                </div>
+                <div class="row">
+                    <div id="teaser" class="col-sm">
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <img src="assets/images/cover.jpg" alt="Book cover for Long Journey Home which is a blue background with a map of Martha's Vineyard and a couple in embracing.">
+            </div>
+        </div>
+        <div class="row" id="authorSection">
+        </div>
+        <div class="row" id="linksSection">
+        </div>
     </div>
 </body>
+
 </html>
