Completed the structure for the author section

--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
         <div class="row" id="synopsisSection">
             <div class="col-sm-8">
                 <div class="row">
-                    <div  id="synopsis" class="col-sm">
+                    <div id="synopsis" class="col-sm">
+                        <!-- there will be a modal in here along with text -->
                     </div>
                 </div>
                 <div class="row">
                     <div id="teaser" class="col-sm">
+                        <!-- there will be a modal in here along with text -->
                     </div>
                 </div>
             </div>
@@ -53,6 +55,21 @@
             </div>
         </div>
         <div class="row" id="authorSection">
+            <div class="col-sm-4">
+                <img src="assets/images/andrew.JPG" alt="Headshot image of the author, Andrew John Robinson.">
+            </div>
+            <div class="col-sm-8">
+                <div class="row">
+                    <div id="authorNote" class="col-sm">
+                        <!-- there will be a modal in here along with text -->
+                    </div>
+                </div>
+                <div class="row">
+                    <div id="authorBio" class="col-sm">
+                        <!-- there will be a modal in here along with text -->
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="row" id="linksSection">
         </div>
