--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/reset.css">    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Merienda:400,700" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>The Long Journey Home</title>
@@ -20,9 +20,10 @@
     <nav class="navbar navbar-expand-lg navbar-light container-fluid">
         <div id="navigation" class="row">
             <!-- move these links to the links section once created -->
-            <a class="navbar-brand col-md-4" href="http://www.mvtimes.com/" target="_blank">Martha's Vineyard Times</a>
-            <a class="navbar-brand col-md-4" href="http://champagnebooks.com/store/index.php" target="_blank">Champagne Books</a>
-            <a class="navbar-brand col-md-4" href="http://champagnebooks.com/store/index.php?id_product=727&controller=product" target="_blank">Preorder Your Copy!</a>
+            <a class="navbar-brand col-md-3" href="http://www.mvtimes.com/" target="_blank">Martha's Vineyard Times</a>
+            <a class="navbar-brand col-md-3" href="http://champagnebooks.com/store/index.php" target="_blank">Champagne Books</a>
+            <a class="navbar-brand col-md-3" href="http://champagnebooks.com/store/index.php?id_product=727&controller=product" target="_blank">Preorder Your Copy!</a>
+            <a class="navbar-brand col-md-3" href="#" target="_blank">Short Stories</a>
         </div>
     </nav>
     <div class="container">
@@ -40,40 +41,137 @@
         <div class="row" id="synopsisSection">
             <div class="col-sm-8">
                 <div class="row">
-                    <div id="synopsis" class="col-sm">
+                    <div id="synopsis" class="col-sm-12">
                         <!-- there will be a modal in here along with text -->
+                        <!-- Trigger the modal with a button -->
+                        <!-- change the button to be a link or look less like a button at the button of the preview text -->
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#synopsisModal">Open Modal</button>
+                        <!-- Modal -->
+                        <div id="synopsisModal" class="modal fade" role="dialog">
+                            <div class="modal-dialog">
+
+                                <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title">Modal Header</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Some text in the modal.</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div id="teaser" class="col-sm">
                         <!-- there will be a modal in here along with text -->
+                         <!-- Trigger the modal with a button -->
+                        <!-- change the button to be a link or look less like a button at the button of the preview text -->
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#teaserModal">Open Modal</button>
+                        <!-- Modal -->
+                        <div id="teaserModal" class="modal fade" role="dialog">
+                            <div class="modal-dialog">
+
+                                <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title">Modal Header</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Some text in the modal.</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-sm-4">
-                <img src="assets/images/cover.jpg" alt="Book cover for Long Journey Home which is a blue background with a map of Martha's Vineyard and a couple in embracing.">
+                <img src="assets/images/cover.jpg" class="images img-responsive" alt="Book cover for Long Journey Home which is a blue background with a map of Martha's Vineyard and a couple in embracing.">
             </div>
         </div>
         <div class="row" id="authorSection">
             <div class="col-sm-4">
-                <img src="assets/images/andrew.JPG" alt="Headshot image of the author, Andrew John Robinson.">
+                <img src="assets/images/andrew.JPG" class="images img-responsive" alt="Headshot image of the author, Andrew John Robinson.">
             </div>
             <div class="col-sm-8">
                 <div class="row">
                     <div id="authorNote" class="col-sm">
                         <!-- there will be a modal in here along with text -->
+                         <!-- Trigger the modal with a button -->
+                        <!-- change the button to be a link or look less like a button at the button of the preview text -->
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#authorNoteModal">Open Modal</button>
+                        <!-- Modal -->
+                        <div id="authorNoteModal" class="modal fade" role="dialog">
+                            <div class="modal-dialog">
+
+                                <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title">Modal Header</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Some text in the modal.</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div id="authorBio" class="col-sm">
                         <!-- there will be a modal in here along with text -->
+                         <!-- Trigger the modal with a button -->
+                        <!-- change the button to be a link or look less like a button at the button of the preview text -->
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#authorBioModal">Open Modal</button>
+                        <!-- Modal -->
+                        <div id="authorBioModal" class="modal fade" role="dialog">
+                            <div class="modal-dialog">
+
+                                <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title">Modal Header</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Some text in the modal.</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row" id="linksSection">
+            <div class="col-sm" id="linkHolder">
+                <!-- links should be generated from an array of objects via jQuery so that dad can modify the JS if he wants to add or modify the links? -->
+            </div>
         </div>
     </div>
 </body>
-
+<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="assets/js/app.js"></script>
 </html>
