added divs to add stylings to the modal blurbs

--- a/index.html
+++ b/index.html
@@ -31,10 +31,20 @@
         <div class="row" id="tagBlurb">
             <div class="col-sm">
                 <div id="taglineDiv">
+                    <p>
+                        Couple thrown back to Colonial America faces multiple challenges as they try to avoid creating a time paradox while waiting
+                        for a chance to return home.
+                    </p>
                 </div>
             </div>
             <div class="col-sm">
                 <div id="blurbDiv">
+                    <p>
+                        Young couple travels through time to Martha’s Vineyard during the Revolutionary War. Trapped there until the portal opens
+                        again in a year, they face numerous challenges at fitting into Colonial society. They also fall in
+                        love and relish some of the unique aspects of island life: the deaf community of Chilmark and the
+                        Wampanoag of Aquinnah to name only two.
+                    </p>
                 </div>
             </div>
         </div>
@@ -42,17 +52,20 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div id="synopsis" class="col-sm-12">
-                        <p>June 2029, Hazel comes to Martha’s Vineyard to visit her boyfriend Arthur. He gives her a tour that
-                            ends at a cave he and his friends used to play in. At noon on the summer solstice a shaft of
-                            light enters and illuminates a crystal. An island myth says that if two people in love stand
-                            before the crystal, the light will open a door into the infinite. A vortex opens; they are hurled
-                            from the cave, and after they wade ashore on South Beach they’re met by Joshua and Patience Mayhew
-                            who lived on the island during the Revolutionary War. They’re back in June of 1779!
-                            <br>
-                            <a class="links" data-toggle="modal" data-target="#synopsisModal">
-                                <strong>Read more...</strong>
-                            </a>
+                        <div class="modalBlurb">
+                        <p>
+                            June 2029, Hazel comes to Martha’s Vineyard to visit her boyfriend Arthur. He gives her a tour that ends at a cave he and
+                            his friends used to play in. At noon on the summer solstice a shaft of light enters and illuminates
+                            a crystal. An island myth says that if two people in love stand before the crystal, the light
+                            will open a door into the infinite. A vortex opens; they are hurled from the cave, and after
+                            they wade ashore on South Beach they’re met by Joshua and Patience Mayhew who lived on the island
+                            during the Revolutionary War. They’re back in June of 1779!
                         </p>
+                        <br>
+                        <a class="links" data-toggle="modal" data-target="#synopsisModal">
+                            <strong>Read more...</strong>
+                        </a>
+                    </div>
                         <!-- Modal -->
                         <div id="synopsisModal" class="modal fade" role="dialog">
                             <div class="modal-dialog">
@@ -135,6 +148,7 @@
                 </div>
                 <div class="row">
                     <div id="teaser" class="col-sm">
+                            <div class="modalBlurb">
                         <p>
                             Sitting back, he lightly held the reins, and just took it in. Around them were all the glories of nature and all Art wanted
                             to do was absorb it, let it soak into every fiber of his being, and be one with it. This was
@@ -152,6 +166,7 @@
                                 <strong>Read more...</strong>
                             </a>
                         </span>
+                        </div>
                         <!-- Modal -->
                         <div id="teaserModal" class="modal fade" role="dialog">
                             <div class="modal-dialog">
@@ -230,6 +245,7 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div id="authorNote" class="col-sm">
+                            <div class="modalBlurb">
                         <p>
                             Time travel, historical dramas with strong female leads, and alternate history are three of my favorite subjects, and about
                             a year ago, while watching the Outlander cable series, I was inspired to create my latest novel
@@ -247,6 +263,7 @@
                                 <strong>Read more...</strong>
                             </a>
                         </span>
+                        </div>
                         <!-- Modal -->
                         <div id="authorNoteModal" class="modal fade" role="dialog">
                             <div class="modal-dialog">
@@ -340,6 +357,7 @@
                 </div>
                 <div class="row">
                     <div id="authorBio" class="col-sm">
+                            <div class="modalBlurb">
                         <p>
                             Born and raised in Arlington, Massachusetts, and the youngest of five boys, he’s the son of a New England father and Italian
                             mother. This means he’s passionate, but he never shows it!
@@ -350,6 +368,7 @@
                                 <strong>Read more...</strong>
                             </a>
                         </span>
+                        </div>
                         <!-- Modal -->
                         <div id="authorBioModal" class="modal fade" role="dialog">
                             <div class="modal-dialog">
@@ -455,40 +474,69 @@
                                             </ul>
                                         </div>
                                         <p>
-                                        He has several other books in the works, and his latest – The Long Journey Home – is being published by Champagne Book Group with a release date of August 2018. It’s a time travel fantasy similar to Outlander, and tells the story of a young couple thrown back in time to Martha’s Vineyard during
-                                        the Revolutionary War. 
+                                            He has several other books in the works, and his latest – The Long Journey Home – is being published by Champagne Book Group
+                                            with a release date of August 2018. It’s a time travel fantasy similar to Outlander,
+                                            and tells the story of a young couple thrown back in time to Martha’s Vineyard
+                                            during the Revolutionary War.
                                         </p>
                                         <p>
-                                        Several hundred of his short stories are available for viewing
-                                        on www.GrubStreet.ca. A collection of those stories formed the basis for his anthology.
+                                            Several hundred of his short stories are available for viewing on www.GrubStreet.ca. A collection of those stories formed
+                                            the basis for his anthology.
                                         </p>
                                         <p>
-                                        One of his movie screenplays – Wiccans Lair – was made into a motion picture by an Orlando indie (independent) film company, PC Productions. While not released, a Rep for 20th Century Fox called it, “engrossing and well-made.” He’s also written a dozen other screenplays, they run the gamut from romantic comedies to horror to sci-fi to family-friendly stories. He assisted Zman Films in New York with Hip Hop High (a HSM-type of script), which was a stage show presented as part of the New York City Fringe Fest, and a trailer can be seen on <a href="http://www.youtube.com/watch?v=e_MACsAXr2o">YouTube</a>.
+                                            One of his movie screenplays – Wiccans Lair – was made into a motion picture by an Orlando indie (independent) film company,
+                                            PC Productions. While not released, a Rep for 20th Century Fox called it, “engrossing
+                                            and well-made.” He’s also written a dozen other screenplays, they run the gamut
+                                            from romantic comedies to horror to sci-fi to family-friendly stories. He assisted
+                                            Zman Films in New York with Hip Hop High (a HSM-type of script), which was a
+                                            stage show presented as part of the New York City Fringe Fest, and a trailer
+                                            can be seen on
+                                            <a href="http://www.youtube.com/watch?v=e_MACsAXr2o">YouTube</a>.
                                         </p>
                                         <p>
-                                        He also collaborated with Zman Films on Guitar Hero – the Musical, a stage play. He wrote Arena Morte, a sci-fi/action script, which is in pre-production with Frontline Studios, a Polish film company, and was also the basis for a RP game of the same name. Two other scripts, Chaos and Life (a romantic comedy) and Sepah: The Middle East Guard (an action adventure) are in pre-production with an Iranian-based company, and another, Safe Place a suspense-thriller is also in pre-production. 
+                                            He also collaborated with Zman Films on Guitar Hero – the Musical, a stage play. He wrote Arena Morte, a sci-fi/action script,
+                                            which is in pre-production with Frontline Studios, a Polish film company, and
+                                            was also the basis for a RP game of the same name. Two other scripts, Chaos and
+                                            Life (a romantic comedy) and Sepah: The Middle East Guard (an action adventure)
+                                            are in pre-production with an Iranian-based company, and another, Safe Place
+                                            a suspense-thriller is also in pre-production.
                                         </p>
                                         <p>
-                                        His most recent script is Cannabis Queen: The Elvy Musikka Story, a true-life story about a lady who has been at the forefront of the fight to legalize medical marijuana. He and his associates are trying to get funding for the film or sell the script to a production company. 
+                                            His most recent script is Cannabis Queen: The Elvy Musikka Story, a true-life story about a lady who has been at the forefront
+                                            of the fight to legalize medical marijuana. He and his associates are trying
+                                            to get funding for the film or sell the script to a production company.
                                         </p>
                                         <p>
-                                        He’s written pilots for eight television series: two sitcoms and six children’s animated series; one series is being considered by Aljazeera Children’s Network, and three others by Cartoon Network. He’s also done treatments for all of these and several reality shows. One of them, the Youth Talks Show, is currently seeking sponsors.
+                                            He’s written pilots for eight television series: two sitcoms and six children’s animated series; one series is being considered
+                                            by Aljazeera Children’s Network, and three others by Cartoon Network. He’s also
+                                            done treatments for all of these and several reality shows. One of them, the
+                                            Youth Talks Show, is currently seeking sponsors.
                                         </p>
                                         <p>
-                                        The singing duo 3Dimensional is currently on tour and has several music videos, and hired him to write a web series for them similar to The Monkees TV show. 
+                                            The singing duo 3Dimensional is currently on tour and has several music videos, and hired him to write a web series for them
+                                            similar to The Monkees TV show.
                                         </p>
                                         <p>
-                                        He wrote the story for a comic book: Diva TEAM: A Fiery Beginning, currently being prepared for publication, and two computer games: Incognito (<a href="https://gamecritics.com/richard-naik/incognito-episode-one-review/">episodes 1</a> and 2), available
-                                        from <a href="https://gamecritics.com/richard-naik/interview-with-ron-mcdowell-cto-of-magrathean-technologies/">Magrathean Technologies</a>. 
+                                            He wrote the story for a comic book: Diva TEAM: A Fiery Beginning, currently being prepared for publication, and two computer
+                                            games: Incognito (
+                                            <a href="https://gamecritics.com/richard-naik/incognito-episode-one-review/">episodes 1</a> and 2), available from
+                                            <a href="https://gamecritics.com/richard-naik/interview-with-ron-mcdowell-cto-of-magrathean-technologies/">Magrathean Technologies</a>.
                                         </p>
                                         <p>
-                                        He’s ghost written and/or helped half a dozen people with their books, both fiction and non-fiction, and he continues to work as a freelance writer. Using the Internet, he’s written for clients all over the world – from England to Australia – and his articles have appeared in US Developers Journal, US Executive Journal, Canadian Executive Journal, Charter Schools Today, and other publications. He’s available to teach classes in script writing and story writing.
+                                            He’s ghost written and/or helped half a dozen people with their books, both fiction and non-fiction, and he continues to
+                                            work as a freelance writer. Using the Internet, he’s written for clients all
+                                            over the world – from England to Australia – and his articles have appeared in
+                                            US Developers Journal, US Executive Journal, Canadian Executive Journal, Charter
+                                            Schools Today, and other publications. He’s available to teach classes in script
+                                            writing and story writing.
                                         </p>
                                         <p>
-                                        He can be contacted via <a href="mailto:DrWhoAR@hotmail.com">email</a>.
+                                            He can be contacted via
+                                            <a href="mailto:DrWhoAR@hotmail.com">email</a>.
                                         </p>
                                         <p>
-                                        Married, the father of one child – a daughter, which explains why most of his stories feature strong female leads. He and his wife are foster parents and currently care for a thirteen-year-old boy.
+                                            Married, the father of one child – a daughter, which explains why most of his stories feature strong female leads. He and
+                                            his wife are foster parents and currently care for a thirteen-year-old boy.
                                         </p>
                                     </div>
                                     <div class="modal-footer">
