added styling to the page and fixed the link css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Merienda:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title class="text-center">The Long Journey Home</title>
 </head>
@@ -22,7 +23,7 @@
             <!-- move these links to the links section once created -->
             <a class="navbar-brand col-md-3" href="http://www.mvtimes.com/" target="_blank">Martha's Vineyard Times</a>
             <a class="navbar-brand col-md-3" href="http://champagnebooks.com/store/index.php" target="_blank">Champagne Books</a>
-            <a class="navbar-brand col-md-3" href="http://champagnebooks.com/store/index.php?id_product=727&controller=product" target="_blank">Preorder Your Copy!</a>
+            <a class="navbar-brand col-md-3" href="http://champagnebooks.com/store/index.php?id_product=727&controller=product" target="_blank">Order Your Copy!</a>
             <a class="navbar-brand col-md-3" href="http://grubstreet.ca/articles/author/1/aj-robinson" target="_blank">Short Stories</a>
         </div>
     </nav>
@@ -31,8 +32,9 @@
         <div class="row" id="tagBlurb">
             <div class="col-sm">
                 <div id="taglineDiv">
+                    <h2>A journey through time...</h2>
                     <p>
-                        Couple thrown back to Colonial America faces multiple challenges as they try to avoid creating a time paradox while waiting
+                        A couple thrown back to Colonial America faces multiple challenges as they try to avoid creating a time paradox while waiting
                         for a chance to return home.
                     </p>
                 </div>
@@ -53,19 +55,24 @@
                 <div class="row">
                     <div id="synopsis" class="col-sm-12">
                         <div class="modalBlurb">
-                        <p>
-                            June 2029, Hazel comes to Martha’s Vineyard to visit her boyfriend Arthur. He gives her a tour that ends at a cave he and
-                            his friends used to play in. At noon on the summer solstice a shaft of light enters and illuminates
-                            a crystal. An island myth says that if two people in love stand before the crystal, the light
-                            will open a door into the infinite. A vortex opens; they are hurled from the cave, and after
-                            they wade ashore on South Beach they’re met by Joshua and Patience Mayhew who lived on the island
-                            during the Revolutionary War. They’re back in June of 1779!
-                        </p>
-                        <br>
-                        <a class="links" data-toggle="modal" data-target="#synopsisModal">
-                            <strong>Read more...</strong>
-                        </a>
-                    </div>
+                            <h2>
+                                <strong>Synopsis</strong>
+                            </h2>
+                            <p>
+                                June 2029, Hazel comes to Martha’s Vineyard to visit her boyfriend Arthur. He gives her a tour that ends at a cave he and
+                                his friends used to play in. At noon on the summer solstice a shaft of light enters and illuminates
+                                a crystal. An island myth says that if two people in love stand before the crystal, the light
+                                will open a door into the infinite. A vortex opens; they are hurled from the cave, and after
+                                they wade ashore on South Beach they’re met by Joshua and Patience Mayhew who lived on the
+                                island during the Revolutionary War. They’re back in June of 1779!
+                            </p>
+                            <br>
+                            <span>
+                                <a class="links" data-toggle="modal" data-target="#synopsisModal">
+                                    <strong>Read more...</strong>
+                                </a>
+                            </span>
+                        </div>
                         <!-- Modal -->
                         <div id="synopsisModal" class="modal fade" role="dialog">
                             <div class="modal-dialog">
@@ -148,24 +155,27 @@
                 </div>
                 <div class="row">
                     <div id="teaser" class="col-sm">
-                            <div class="modalBlurb">
-                        <p>
-                            Sitting back, he lightly held the reins, and just took it in. Around them were all the glories of nature and all Art wanted
-                            to do was absorb it, let it soak into every fiber of his being, and be one with it. This was
-                            the island as he always imagined it could be: peaceful and quiet, and populated by happy and
-                            friendly folk. No stench of gas and oil assailed his nose. Trees, tall and strong stretched as
-                            far as he could see, and there was no roar of chainsaws signaling their untimely demise. He desperately
-                            wanted to throw his arms out as if it might help him embrace the powers he felt swirling around
-                            him. Instead, he closed his eyes, inhaled the clear air as deep as he could, and let the stresses
-                            of life drain from his body. They were replaced by the (for lack of a better term) bio-energies
-                            ebbing and flowing about the carriage.
-                        </p>
-                        <br>
-                        <span>
-                            <a class="links" data-toggle="modal" data-target="#teaserModal">
-                                <strong>Read more...</strong>
-                            </a>
-                        </span>
+                        <div class="modalBlurb">
+                            <h2>
+                                <strong>Excerpt</strong>
+                            </h2>
+                            <p>
+                                Sitting back, he lightly held the reins, and just took it in. Around them were all the glories of nature and all Art wanted
+                                to do was absorb it, let it soak into every fiber of his being, and be one with it. This
+                                was the island as he always imagined it could be: peaceful and quiet, and populated by happy
+                                and friendly folk. No stench of gas and oil assailed his nose. Trees, tall and strong stretched
+                                as far as he could see, and there was no roar of chainsaws signaling their untimely demise.
+                                He desperately wanted to throw his arms out as if it might help him embrace the powers he
+                                felt swirling around him. Instead, he closed his eyes, inhaled the clear air as deep as he
+                                could, and let the stresses of life drain from his body. They were replaced by the (for lack
+                                of a better term) bio-energies ebbing and flowing about the carriage.
+                            </p>
+                            <br>
+                            <span>
+                                <a class="links" data-toggle="modal" data-target="#teaserModal">
+                                    <strong>Read more...</strong>
+                                </a>
+                            </span>
                         </div>
                         <!-- Modal -->
                         <div id="teaserModal" class="modal fade" role="dialog">
@@ -245,24 +255,28 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div id="authorNote" class="col-sm">
-                            <div class="modalBlurb">
-                        <p>
-                            Time travel, historical dramas with strong female leads, and alternate history are three of my favorite subjects, and about
-                            a year ago, while watching the Outlander cable series, I was inspired to create my latest novel
-                            The Long Journey Home, and it took off. To be honest, there were aspects of that series that
-                            I found weak: the time travel mechanism seemed simplistic to me, and I didn’t like that the characters
-                            were trying to change history – especially as it was a major historic event that truly couldn’t
-                            be changed! It was like sci-fi movies I’d seen about the Kennedy assassination, Pearl Harbor,
-                            and even one about trying to kill President Charles de Gaulle of France. The latter was the book
-                            and movie The Day of the Jackal. Both were outstanding thrillers, and I thought about how the
-                            author and filmmaker managed to achieve that. After all, people reading the book and seeing the
-                            movie knew that the assassin failed. So, how do you make that kind of story compelling?
-                        </p>
-                        <span>
-                            <a class="links" data-toggle="modal" data-target="#authorNoteModal">
-                                <strong>Read more...</strong>
-                            </a>
-                        </span>
+                        <div class="modalBlurb">
+                            <h2>
+                                <strong>A Note From the Author</strong>
+                            </h2>
+                            <p>
+                                Time travel, historical dramas with strong female leads, and alternate history are three of my favorite subjects, and about
+                                a year ago, while watching the Outlander cable series, I was inspired to create my latest
+                                novel The Long Journey Home, and it took off. To be honest, there were aspects of that series
+                                that I found weak: the time travel mechanism seemed simplistic to me, and I didn’t like that
+                                the characters were trying to change history – especially as it was a major historic event
+                                that truly couldn’t be changed! It was like sci-fi movies I’d seen about the Kennedy assassination,
+                                Pearl Harbor, and even one about trying to kill President Charles de Gaulle of France. The
+                                latter was the book and movie The Day of the Jackal. Both were outstanding thrillers, and
+                                I thought about how the author and filmmaker managed to achieve that. After all, people reading
+                                the book and seeing the movie knew that the assassin failed. So, how do you make that kind
+                                of story compelling?
+                            </p>
+                            <span>
+                                <a class="links" data-toggle="modal" data-target="#authorNoteModal">
+                                    <strong>Read more...</strong>
+                                </a>
+                            </span>
                         </div>
                         <!-- Modal -->
                         <div id="authorNoteModal" class="modal fade" role="dialog">
@@ -357,17 +371,20 @@
                 </div>
                 <div class="row">
                     <div id="authorBio" class="col-sm">
-                            <div class="modalBlurb">
-                        <p>
-                            Born and raised in Arlington, Massachusetts, and the youngest of five boys, he’s the son of a New England father and Italian
-                            mother. This means he’s passionate, but he never shows it!
-                        </p>
-                        <br>
-                        <span>
-                            <a class="links" data-toggle="modal" data-target="#authorBioModal">
-                                <strong>Read more...</strong>
-                            </a>
-                        </span>
+                        <div class="modalBlurb">
+                            <h2>
+                                <strong>About the Author</strong>
+                            </h2>
+                            <p>
+                                Born and raised in Arlington, Massachusetts, and the youngest of five boys, he’s the son of a New England father and Italian
+                                mother. This means he’s passionate, but he never shows it!
+                            </p>
+                            <br>
+                            <span>
+                                <a class="links" data-toggle="modal" data-target="#authorBioModal">
+                                    <strong>Read more...</strong>
+                                </a>
+                            </span>
                         </div>
                         <!-- Modal -->
                         <div id="authorBioModal" class="modal fade" role="dialog">
@@ -550,11 +567,11 @@
                 </div>
             </div>
         </div>
-        <div class="row" id="linksSection">
+        <!-- <div class="row" id="linksSection">
             <div class="col-sm" id="linkHolder">
-                <!-- links should be generated from an array of objects via jQuery so that dad can modify the JS if he wants to add or modify the links? -->
+                <!links should be generated from an array of objects via jQuery so that dad can modify the JS if he wants to add or modify the links?
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
